# amalgam

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  circle.yml
example_plugins/hello_api/: CMakeLists.txt  hello_api_plugin.cpp
libraries/app/: CMakeLists.txt  api.cpp  application.cpp  database_api.cpp  impacted.cpp  plugin.cpp
libraries/appbase/: application.cpp
libraries/chain/: CMakeLists.txt  amalgam_evaluator.cpp  amalgam_objects.cpp  block_log.cpp  database.cpp  fork_database.cpp  shared_authority.cpp  transaction_object.cpp  witness_schedule.cpp
libraries/chain/hardfork.d/: 0-preamble.hf  0_1.hf
libraries/chain/include/amalgam/chain/: account_object.hpp  amalgam_evaluator.hpp  amalgam_object_types.hpp  amalgam_objects.hpp  block_log.hpp  block_summary_object.hpp  buffer_type.hpp  comment_object.hpp  custom_operation_interpreter.hpp  database.hpp  database_exceptions.hpp  db_with.hpp  evaluator.hpp  evaluator_registry.hpp  fork_database.hpp  generic_custom_operation_interpreter.hpp  global_property_object.hpp  hardfork_property_object.hpp  history_object.hpp  index.hpp  node_property_object.hpp  notifications.hpp  operation_notification.hpp  schema_types.hpp  shared_authority.hpp  shared_db_merkle.hpp  transaction_object.hpp  witness_objects.hpp  witness_schedule.hpp
libraries/chain/include/amalgam/chain/schema_types/: oid.hpp
libraries/chain/include/amalgam/chain/util/: advanced_benchmark_dumper.hpp  asset.hpp  impacted.hpp  reward.hpp  signal.hpp  uint256.hpp
libraries/chain/util/: advanced_benchmark_dumper.cpp  impacted.cpp  reward.cpp
libraries/fc/: .gitignore  CMakeLists.txt
libraries/manifest/: CMakeLists.txt
libraries/net/: CMakeLists.txt  node.cpp  peer_connection.cpp
libraries/plugins/account_by_key/: CMakeLists.txt  account_by_key_api.cpp  account_by_key_plugin.cpp  plugin.json
libraries/plugins/account_by_key/include/amalgam/account_by_key/: account_by_key_api.hpp  account_by_key_objects.hpp  account_by_key_plugin.hpp
libraries/plugins/account_by_key/include/amalgam/plugins/account_by_key/: account_by_key_objects.hpp  account_by_key_plugin.hpp
libraries/plugins/account_history/: CMakeLists.txt  account_history_plugin.cpp  plugin.json
libraries/plugins/account_history/include/amalgam/account_history/: account_history_plugin.hpp
libraries/plugins/account_history/include/amalgam/plugins/account_history/: account_history_plugin.hpp
libraries/plugins/account_statistics/: CMakeLists.txt  account_statistics_api.cpp  account_statistics_plugin.cpp  plugin.json
libraries/plugins/account_statistics/include/amalgam/account_statistics/: account_statistics_api.hpp  account_statistics_plugin.hpp
libraries/plugins/block_info/: CMakeLists.txt  block_info_api.cpp  block_info_plugin.cpp  plugin.json
libraries/plugins/block_info/include/amalgam/plugins/block_info/: block_info.hpp  block_info_api.hpp  block_info_plugin.hpp
libraries/plugins/blockchain_statistics/: CMakeLists.txt  blockchain_statistics_api.cpp  blockchain_statistics_plugin.cpp  plugin.json
libraries/plugins/blockchain_statistics/include/amalgam/blockchain_statistics/: blockchain_statistics_api.hpp  blockchain_statistics_plugin.hpp
libraries/plugins/follow/: CMakeLists.txt  follow_api.cpp  follow_evaluators.cpp  follow_operations.cpp  follow_plugin.cpp  plugin.json
libraries/plugins/follow/include/amalgam/follow/: follow_api.hpp  follow_objects.hpp  follow_operations.hpp  follow_plugin.hpp
libraries/plugins/market_history/: CMakeLists.txt  market_history_api.cpp  market_history_plugin.cpp  plugin.json
libraries/plugins/market_history/include/amalgam/market_history/: market_history_api.hpp  market_history_plugin.hpp
libraries/plugins/market_history/include/amalgam/plugins/market_history/: market_history_plugin.hpp
libraries/plugins/private_message/: CMakeLists.txt  plugin.json  private_message_plugin.cpp
libraries/plugins/private_message/include/amalgam/private_message/: private_message_evaluators.hpp  private_message_operations.hpp  private_message_plugin.hpp
libraries/plugins/raw_block/: CMakeLists.txt  plugin.json  raw_block_api.cpp  raw_block_plugin.cpp
libraries/plugins/raw_block/include/amalgam/plugins/raw_block/: raw_block_api.hpp  raw_block_plugin.hpp
libraries/plugins/tags/: CMakeLists.txt  plugin.json  tags_plugin.cpp
libraries/plugins/tags/include/amalgam/tags/: tags_plugin.hpp
libraries/plugins/witness/: CMakeLists.txt  plugin.json  witness_evaluators.cpp  witness_operations.cpp  witness_plugin.cpp
libraries/plugins/witness/include/amalgam/plugins/witness/: witness_objects.hpp  witness_plugin.hpp
libraries/plugins/witness/include/amalgam/witness/: witness_objects.hpp  witness_operations.hpp  witness_plugin.hpp
libraries/protocol/: CMakeLists.txt  amalgam_operations.cpp  asset.cpp  authority.cpp  block.cpp  get_config.cpp  operations.cpp  schema_types.cpp  sign_state.cpp  transaction.cpp  types.cpp  version.cpp
libraries/schema/: CMakeLists.txt  schema.cpp
libraries/schema/include/amalgam/schema/: abstract_schema.hpp  schema.hpp  schema_impl.hpp  schema_types.hpp
libraries/schema/include/amalgam/schema/schema_types/: flat_map.hpp  flat_set.hpp  pair.hpp  static_variant.hpp  vector.hpp
libraries/utilities/: CMakeLists.txt  benchmark_dumper.cpp  git_revision.cpp.in  key_conversion.cpp  logging_config.cpp  string_escape.cpp  tempdir.cpp  words.cpp
libraries/utilities/include/amalgam/utilities/: benchmark_dumper.hpp  git_revision.hpp  key_conversion.hpp  logging_config.hpp  padding_ostream.hpp  plugin_utilities.hpp  string_escape.hpp  tempdir.hpp  words.hpp
libraries/wallet/: CMakeLists.txt  Doxyfile.in  api_documentation_standin.cpp  generate_api_documentation.pl  wallet.cpp
libraries/wallet/include/amalgam/wallet/: api_documentation.hpp  reflect_util.hpp  remote_node_api.hpp  wallet.hpp
programs/: CMakeLists.txt
programs/amalgamd/: CMakeLists.txt  main.cpp
programs/build_helpers/: check_reflect.py  configure_build.py  get_config_check.sh
programs/cli_wallet/: CMakeLists.txt  main.cpp
(+112 files in other folders)
